refactor: update goal contribution API to use request body and enhance user search with pagination and deferred modal loading